--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -6,12 +6,18 @@
       <dd><input type="text" size="30" name="title">
       <dt>Text:
       <dd><textarea name="text" rows="5" cols="40"></textarea>
+        <dt>Category:
+      <dd><input type="text" size ="30" name="category">
       <dd><input type="submit" value="Share">
     </dl>
   </form>
   <ul class="entries">
   {% for entry in entries %}
-    <li><h2>{{ entry.title }}</h2>{{ entry.text|safe }}</li>
+    <li><h2>{{ entry.title }}</h2>{{ entry.text|safe }}
+      {% if entry.category %}
+      <p>Category: {{ entry.category }}</p>
+        {% endif %}
+      </li>
   {% else %}
     <li><em>Unbelievable.  No entries here so far</em></li>
   {% endfor %}
